Remove button and bug fixes

--- a/linkbook/core/templates/core/edit_profile.html
+++ b/linkbook/core/templates/core/edit_profile.html
@@ -38,6 +38,8 @@
     <script>
     $(function () {
 
+        $('.modal').modal();
+
         var File = $('input[type="file"]');
         var Parent = File.parent();
         Parent.addClass('file-field');
