--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -4,5 +4,25 @@
 
 {% block title %}Home{% endblock %}
 
+
+
+
+
+
+
+
+
+
 {% block body %}
+
+
+<script>
+    $(function () {
+
+        $('.modal').modal();
+
+    });
+</script>
+
+
 {% endblock body %}
