--- a/linkbook/core/templates/core/temp.html
+++ b/linkbook/core/templates/core/temp.html
@@ -423,7 +423,10 @@
        // $('#follow_button').html(data['follow_button']);
         $('#follower_count').html(data['follower_count'] + " followers");
         });
+
     });
+            $('.modal').modal();
+
 
         });
     </script>
