--- a/linkbook/links/templates/links/book.html
+++ b/linkbook/links/templates/links/book.html
@@ -91,6 +91,7 @@
                 var url = '/link/' + id;
                 window.location.href = url;
             });
+    $('.modal').modal();
 
         });
 
