--- a/linkbook/links/templates/links/new_book.html
+++ b/linkbook/links/templates/links/new_book.html
@@ -44,6 +44,8 @@
          $('#DESCRIPTION').trigger('autoresize');
          $('.chips').material_chip();
          $('#TITLE, #DESCRIPTION').characterCounter();
+             $('.modal').modal();
+
 
     })
     </script>
