--- a/linkbook/links/templates/links/new_link.html
+++ b/linkbook/links/templates/links/new_link.html
@@ -74,6 +74,8 @@
          $('.chips').material_chip();
 
          $('#TITLE, #DESCRIPTION').characterCounter();
+             $('.modal').modal();
+
 
     });
     </script>
