--- a/linkbook/links/templates/links/edit_book.html
+++ b/linkbook/links/templates/links/edit_book.html
@@ -44,6 +44,8 @@
          $('.chips').material_chip();
 
          $('#TITLE, #DESCRIPTION').characterCounter();
+             $('.modal').modal();
+
 
     })
     </script>
